examples/test-suite/test-k-view-rc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-k-view-rc-service
  namespace: k-view-test-data
  labels:
    app: test-k-view-rc
    tier: networking
spec:
  selector:
    app: test-k-view-rc
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
