examples/test-suite/test-k-view-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-k-view-networkpolicy
  namespace: k-view-test-data
spec:
  podSelector:
    matchLabels:
      app: test-k-view
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: test-k-view-deploy
    ports:
    - protocol: TCP
      port: 80
